--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <hmtl>
-<head>
-<title>
-Intro
-</title>
-</head>
-<body>
-<center><h2>Hllo,This is Indraj.</h2></center>
-</body>
+  <head>
+    <title>
+      Intro
+    </title>
+  </head>
+  <body>
+    <center>
+      <img src="DP.jpg">
+       <h2>
+         Hllo,This is Indraj.
+      </h2>
+    </center>
+  </body>
 </html>
