--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <center>
-      <img src="DP.jpg">
+      <img src="DP.jpg" alt="DP.jg">
        <h2>
          Hllo,This is Indraj.
       </h2>
