--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <center>
       <img src="DP.jpg" alt="DP.jg">
        <h2>
-         Hllo,This is Indraj.
+         Hello World,This is Indraj.
       </h2>
     </center>
   </body>
