--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       Intro
     </title>
   </head>
-  <body>
+  <body background="#3d3d3d">
     <center>
       <img src="DP.jpg" alt="DP.jg">
        <h2>
