--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       Intro
     </title>
   </head>
-  <body background="#3d3d3d">
+  <body style="background-color:rgb(61,61,61);">
     <center>
       <img src="DP.jpg" alt="DP.jg">
        <h2>
