--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <center>
-      <img src="DP.jpg">
+      <img src=".\images\DP.jpg">
        <h2>
-         Hllo,This is Indraj.
+         Hello World,This is Indraj.
       </h2>
     </center>
   </body>
