--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background-color:rgb(61,61,61);">
     <center>
-      <img src="DP.jpg">
+      <img src="./images/DP.jpg">
        <h2>
          Hello World,This is Indraj.
       </h2>
