--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
       Intro
     </title>
   </head>
-  <body style="background-color:rgb(61,61,61);">
-    <center>
-      <img src="images/DP.jpg">
-       <h2>
-         Hello World,This is Indraj.
-      </h2>
-    </center>
+  <body>
+    <div class="bg-image"></div>
+    <div class="bg-text">
+        <h1>Hello World, I am Indraj.</h1>
+    </div>
   </body>
 </html>
