--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <div class="bg-image"></div>
 
 <div class="bg-text">
-  <h2>About Me</h2>
+  <h1>About Me</h1>
+  <img src="images/DP.jpg" alt="DP.jpg">
   <h1 style="font-size:50px">Hello World, I am Indraj</h1>
-  <p><img src="images/DP.jpg" alt="DP.jpg"></p>
 </div>
 
 </body>
