--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="bg-text">
   <h1>About Me</h1>
-  <img src="images/DP.jpg" alt="DP.jpg" style="width:20%;height:20%;">
+  <img src="images/DP.jpg" alt="DP.jpg" width="100" height="100">
   <h1 style="font-size:50px">Hello World, I am Indraj</h1>
 </div>
 
