--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <div class="bg-text">
   <h1>About Me</h1>
-  <img src="images/DP.jpg" alt="DP.jpg" width="100" height="100">
-  <h1 style="font-size:50px">Hello World, I am Indraj</h1>
+  <p style="font-size:50px">
+    <img src="images/DP.jpg" alt="DP.jpg" width="100" height="100">
+    Hello World, I am Indraj.
+  </p>
 </div>
 
 </body>
