--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles/index.css">
-</head>
-<body>
 
-<div class="bg-image"></div>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/index.css">
+  </head>
 
-<div class="bg-text">
-  <h1>About Me</h1>
-  <p style="font-size:50px">
-    <img src="images/DP.jpg" alt="DP.jpg" width="100" height="100">
-    Hello World, I am Indraj.
-  </p>
-</div>
+  <body>
+    <div class="top" style="margin-left: 40%;">
+      <pre >
+        <img src="images/om_square.jpg" height="100px" width="100px" style="border-radius: 50%;">
+      </pre>
+    </div>
 
-</body>
+    <div class="me" style="margin-left: 5%;">
+      <img src="images/DP.jpg" height="300px" width="300px" style="border-radius: 25%;">
+      <img src="images/hw_imi.png">
+    </div>
+    
+  </body>
 </html>
