--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/jpg" href="/images/DP.jpg">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/index.css">
   </head>
